@@ -1909,10 +1909,9 @@ class CBaseActiveRelation extends CComponent
 	/**
 	 * Merges this relation with a criteria specified dynamically.
 	 * @param array $criteria the dynamically specified criteria
-	 * @param boolean $fromScope whether the criteria to be merged is from scopes
 	 * @since 1.0.5
 	 */
-	public function mergeWith($criteria,$fromScope=false)
+	public function mergeWith($criteria)
 	{
 		if($criteria instanceof CDbCriteria)
 			$criteria=$criteria->toArray();
@@ -1997,14 +1996,13 @@ class CStatRelation extends CBaseActiveRelation
 	/**
 	 * Merges this relation with a criteria specified dynamically.
 	 * @param array $criteria the dynamically specified criteria
-	 * @param boolean $fromScope whether the criteria to be merged is from scopes
 	 * @since 1.0.5
 	 */
-	public function mergeWith($criteria,$fromScope=false)
+	public function mergeWith($criteria)
 	{
 		if($criteria instanceof CDbCriteria)
 			$criteria=$criteria->toArray();
-		parent::mergeWith($criteria,$fromScope);
+		parent::mergeWith($criteria);
 
 		if(isset($criteria['defaultValue']))
 			$this->defaultValue=$criteria['defaultValue'];
@@ -2055,25 +2053,12 @@ class CActiveRelation extends CBaseActiveRelation
 	/**
 	 * Merges this relation with a criteria specified dynamically.
 	 * @param array $criteria the dynamically specified criteria
-	 * @param boolean $fromScope whether the criteria to be merged is from scopes
 	 * @since 1.0.5
 	 */
-	public function mergeWith($criteria,$fromScope=false)
+	public function mergeWith($criteria)
 	{
 		if($criteria instanceof CDbCriteria)
 			$criteria=$criteria->toArray();
-		if($fromScope)
-		{
-			if(isset($criteria['condition']) && $this->on!==$criteria['condition'])
-			{
-				if($this->on==='')
-					$this->on=$criteria['condition'];
-				else if($criteria['condition']!=='')
-					$this->on="({$this->on}) AND ({$criteria['condition']})";
-			}
-			unset($criteria['condition']);
-		}
-
 		parent::mergeWith($criteria);
 
 		if(isset($criteria['joinType']))
@@ -2150,14 +2135,13 @@ class CHasManyRelation extends CActiveRelation
 	/**
 	 * Merges this relation with a criteria specified dynamically.
 	 * @param array $criteria the dynamically specified criteria
-	 * @param boolean $fromScope whether the criteria to be merged is from scopes
 	 * @since 1.0.5
 	 */
-	public function mergeWith($criteria,$fromScope=false)
+	public function mergeWith($criteria)
 	{
 		if($criteria instanceof CDbCriteria)
 			$criteria=$criteria->toArray();
-		parent::mergeWith($criteria,$fromScope);
+		parent::mergeWith($criteria);
 		if(isset($criteria['limit']) && $criteria['limit']>0)
 			$this->limit=$criteria['limit'];
 
